# ttns_lib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  run_examples.py
example_outputs/beta_1/ohmic/: spin_boson_exponential.out
example_outputs/beta_1/superohmic/: spin_boson_exponential.out
example_outputs/beta_10/ohmic/: spin_boson_debye.out  spin_boson_exponential.out  spin_boson_sudden.out
example_outputs/beta_10/superohmic/: spin_boson_exponential.out
example_outputs/high_temperature_debye/adiabatic/: out_heom_adiabatic
example_outputs/high_temperature_debye/nonadiabatic/: out_heom_nonadiabatic  spin_boson_debye.in
example_outputs/zero_temperature/ohmic/: spin_boson_debye.out  spin_boson_exponential.out  spin_boson_sudden.out
example_outputs/zero_temperature/subohmic/: spin_boson_exponential.out  spin_boson_sudden.out
example_outputs/zero_temperature/superohmic/: spin_boson_exponential.out
include/ttns_lib/: httensor.hpp  ttns.hpp
include/ttns_lib/decompositions/: orthogonaliser.hpp  root_to_leaf_decomposition.hpp
include/ttns_lib/integrators/: projector_splitting_integrator.hpp
include/ttns_lib/observables/: hamiltonian_operator.hpp  matrix_element.hpp  single_particle_operator.hpp
include/ttns_lib/observables/Untitled Folder/: single_particle_operator.hpp
include/ttns_lib/operators/: direct_product_operator.hpp  liouville_space_operator.hpp  matrix_operators.hpp  primitive_operator.hpp  serialisation_helper.hpp  sop_operator.hpp
include/ttns_lib/tdvp_core/: adapt_bond_dimension.hpp  decomposition_engine.hpp  hamiltonian_container.hpp  hamiltonian_operator.hpp  kronecker_product_operator_helper.hpp  krylov_integrator.hpp  leaf_to_root_decomposition.hpp  matrix_element_core.hpp  mean_field_operator.hpp  operator_compression.hpp  operator_container.hpp  projector_splitting_engine.hpp  projector_splitting_evolution_functions.hpp  root_to_leaf_decomposition.hpp  single_particle_operator.hpp  subgraph_contractions.hpp  subspace_expansion_full_two_site_projector_splitting_engine.hpp  subspace_expansion_projector_splitting_engine.hpp  tdvp_algorithm_engine.hpp  tdvp_tree_traversal.hpp  two_site_energy_variations.hpp
include/ttns_lib/tree/: node_data_traits.hpp  ntree.hpp  ntree_builder.hpp  ntree_factory.hpp  ntree_forward_decl.hpp  ntree_iterator.hpp  ntree_node.hpp  tree.hpp  tree_forward_decl.hpp  tree_node.hpp
include/ttns_lib/ttn_nodes/: httensor_node.hpp  kronecker_product_operator_node.hpp  operator_node.hpp
include/ttns_lib/ttn_nodes/node_traits/: bool_node_traits.hpp  httensor_node_traits.hpp  tensor_node_traits.hpp
include/ttns_lib/utils/: serialisation.hpp  timing_macro.hpp  tmp_funcs.hpp  zip.hpp
inputs/: spin_boson_exponential_commented.in  spin_boson_sudden_commented.in
inputs/beta_1/ohmic/: spin_boson_debye.in  spin_boson_exponential.in  spin_boson_sudden.in
inputs/beta_1/superohmic/: spin_boson_exponential.in
inputs/beta_10/ohmic/: spin_boson_debye.in  spin_boson_exponential.in  spin_boson_sudden.in
inputs/beta_10/superohmic/: spin_boson_exponential.in
inputs/finite_temperature/ohmic/: spin_boson_debye.in  spin_boson_exponential.in  spin_boson_sudden.in
inputs/finite_temperature/superohmic/: spin_boson_exponential.in  spin_boson_sudden.in
inputs/high_temperature_debye/adiabatic/: spin_boson_debye.in
inputs/zero temperature/ohmic/: spin_boson_debye.in  spin_boson_exponential.in  spin_boson_sudden.in
inputs/zero temperature/subohmic/: spin_boson_exponential.in  spin_boson_sudden.in
inputs/zero temperature/superohmic/: spin_boson_exponential.in  spin_boson_sudden.in
inputs/zero_temperature/ohmic/: spin_boson_debye.in  spin_boson_exponential.in  spin_boson_sudden.in
inputs/zero_temperature/subohmic/: spin_boson_exponential.in  spin_boson_sudden.in
inputs/zero_temperature/superohmic/: spin_boson_exponential.in
src/: CMakeLists.txt  mode_data.hpp  spin_boson.cpp  system_bath_coupling_interaction_picture_operator.hpp
src/bath/bath_types/: bath.hpp  brownian_oscillator.hpp  chain_bath.hpp  debye.hpp  discrete_bath.hpp  exponential.hpp  gaussian.hpp  jacobi_cutoff.hpp  sudden.hpp
src/bath/transformations/: density_discretisation.hpp  discretisation.hpp  discretisation_utilities.hpp  quadrature_discretisation.hpp
src/bath/utils/: common.hpp  factory.hpp  io.hpp  type_info.hpp
src/bath/utils/quadrature/levin/: levin_collocation.hpp
temp/: errfiles_1  errfiles_10  errfiles_11  errfiles_12  errfiles_13  errfiles_14  errfiles_2  errfiles_3  errfiles_4  errfiles_5  errfiles_6  errfiles_7  errfiles_8  errfiles_9  infiles_1  infiles_10  infiles_12  infiles_4  infiles_5  infiles_6  infiles_7  infiles_8  infiles_9
